# TileFoundry

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SPEC-RULES.md  develop.md
docs/plans/: TEMPLATE.md  schedule-mvp1.md  wi07-typeinfer-visitor-rebuild.md  wi08-gather-shard-rules.md  wi09-reshape-split-refactor.md  wi12-relation-dimexpr.md
docs/policies/: project-policy.json
docs/spec/: analysis.md  architecture.md  cli.md  code-organization.md  codegen.md  core-ir.md  evaluator.md  hir.md  inspection.md  parser.md  passes.md  runtime.md  schedule.md  shard.md  target.md  tilegraph.md  tir.md  types.md  visitor-mutator.md  visitor-registry.md
include/tilefoundry/: runtime.h
scripts/: finalize_plan_context.py  spec_entropy_lint.py  spec_rules_lint.py
src/tilefoundry/: __init__.py  cli.py  compile.py  module.py  script.py
tests/analysis/: test_access_relation_registry.py  test_access_relations.py  test_fixed_cta_timeline.py  test_isl_utility.py  test_quant_access_relation.py  test_relation_build.py  test_shard_propagate.py  test_type_relation_registry.py
tests/cli/: test_cli.py  test_spec_installation.py
tests/codegen/: test_dispatch_call_emit.py  test_if_emitter.py
tests/core/: test_category_reexports.py  test_custom_op_register.py  test_metadata.py  test_op_registry.py  test_pattern.py  test_register.py  test_typeinfer_discipline.py  test_visitor_registry.py
tests/dsl/: test_dsl_surface.py  test_module_decorator.py
tests/e2e/: test_dynamic_cta_tir_handwritten.py  test_dynamic_shape_dispatch.py  test_host_launch.py  test_mma_tir_handwritten.py  test_rmsnorm_quant.py
tests/evaluator/: test_leaf_registry.py
tests/fixtures/: qwen3_attention_graph.py
tests/inspection/: test_builder.py  test_canonical_roundtrip.py  test_python_printer.py  test_roundtrip.py  test_specialization_print.py
tests/ir/: test_dim_var_envelope.py  test_dispatch_call.py  test_function_call_typeinfer.py  test_grid_region_dynamic_extent.py  test_grid_region_range_nested.py  test_nested_module.py  test_shard_layout_local_shape.py  test_simplify_dim.py  test_specialization_lowering.py  test_verify_letstmt.py  test_visitor.py
tests/ir_types/: test_dtype.py  test_mma_fragment_layouts.py  test_scope_match.py  test_shard_layout.py  test_storage.py  test_tensor_type.py
tests/models/: test_dsv4_ir_smoke.py
tests/ops/: eval_utils.py  test_argmax.py  test_async_copy.py  test_attention_decode.py  test_binary.py  test_cache_update.py  (+40 more)
(+325 files in other folders)
